Spring security added (without testing)
